--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,9 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost/Test
+server:
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
+      enabled: true
